--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <script  src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   </head>
   <body>
+    <ul class="main_menu">
+      <li>
+        <a>Файл</a>
+        <ul class="submenu">
+          <li><a>save</a></li>
+          <li><a>save</a></li>
+        </ul>
+      </li>
+      <li><a>Вид</a></li>
+      <li>
+        <a>Объекты</a>
+        <ul class="submenu">
+          <li><a>object 1</a></li>
+          <li><a>object 2</a></li>
+          <li><a>object 3</a></li>
+        </ul>
+      </li>
+      <li><a>Справка</a></li>
+      <li><a>Выход</a></li>
+    </ul>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
