add table global var in mmodal

--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <script  src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   </head>
   <body>
+
     <ul class="main_menu">
       <li>
         <a>Файл</a>
         <ul class="submenu">
-          <li><a>save</a></li>
+          <li><a href="javascript:void(0);">save as</a></li>
           <li><a>save</a></li>
         </ul>
       </li>
       <li><a>Вид</a></li>
+      <li><a class="open_mmodal">open modal</a></li>
       <li>
         <a>Объекты</a>
         <ul class="submenu">
@@ -29,6 +31,63 @@
       <li><a>Справка</a></li>
       <li><a>Выход</a></li>
     </ul>
+
+    <div class="mmodal ">
+      <a href="javascript:void(0);" class="mmodal__close">x</a>
+      <div class="mmodal__left">
+        left
+        <div class="mmodal__menu">
+          <a href="javascript:void(0);" data-sw="1" class="switch active">Глобальные переменные</a>
+          <a href="javascript:void(0);" data-sw="1" class="switch">Список сцен</a>
+        </div>
+      </div>
+      <div class="mmodal__right">
+        
+        <div data-swb="1">
+          <div class="variable">
+            <p>
+              <span>Глобальные переменные</span>
+              <button class="addVariable">add</button>
+            </p>
+
+              <div class="wrTableVariables">
+                <table class="tbl">
+                  <tr>
+                    <th>name</th>
+                    <th>type</th>
+                    <th>default</th>
+                    <th></th>
+                  </tr>
+                  <tr class="variable__item">
+                    <td><input type="text" value="name 01"></td>
+                    <td>
+                      <select class="select_type">
+                        <option value="1">Boolean</option>
+                        <option value="2">String</option>
+                        <option value="3">Number</option>
+                      </select>
+                    </td>
+                    <td>
+                      <input type="number" value="1">
+                    </td>
+                    <td>
+                      <a href="javascript:void(0);" class="variable__remove">x</a>
+                    </td>
+                  </tr>
+                </table>
+            </div>
+
+          </div>
+        </div>
+
+        <div data-swb="1">
+          <div>
+            <p>Список сцен</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
