--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
       <li>
         <a>Файл</a>
         <ul class="submenu">
-        	<li><a class="debug_btn" data-id="save_module">Сохранить</a></li>
-          <li><a class="debug_btn" data-id="save_all">Сохранить всё</a></li>
+          <li><a class="debug_btn" data-id="variables">Переменные</a></li>
+          <li><a class="debug_btn" data-id="save">Сохранить</a></li>
 
         </ul>
       </li>
       <li><a>Вид</a></li>
-      <li><a class="open_mmodal">open modal</a></li>
       <li>
         <a>Сцены</a>
-        <ul class="submenu menu_scenes">
-          <li><a>object 1</a></li>
-          <li><a>object 2</a></li>
-          <li><a>object 3</a></li>
-        </ul>
+        <ul class="submenu menu_scenes"></ul>
+      </li>
+      <li>
+        <a>Модули</a>
+        <ul class="submenu menu_modules"></ul>
       </li>
       <li><a>Отладка</a>
       <ul class="submenu ">
@@ -45,48 +44,17 @@
     <div class="mmodal ">
       <a href="javascript:void(0);" class="mmodal__close">x</a>
       <div class="mmodal__left">
-        left
-        <div class="mmodal__menu">
-          <a href="javascript:void(0);" data-sw="1" class="switch active">Глобальные переменные</a>
-          <a href="javascript:void(0);" data-sw="1" class="switch">Список сцен</a>
-        </div>
+        <div class="mmodal__menu variables_categorys"></div>
       </div>
       <div class="mmodal__right">
         
         <div data-swb="1">
           <div class="variable">
             <p>
-              <span>Глобальные переменные</span>
-              <button class="addVariable">add</button>
+              <span class="variables_scene_title">Глобальные переменные</span>
+              <button class="add_variable">Добавить</button>
             </p>
-
-              <div class="wrTableVariables">
-                <table class="tbl">
-                  <tr>
-                    <th>name</th>
-                    <th>type</th>
-                    <th>default</th>
-                    <th></th>
-                  </tr>
-                  <tr class="variable__item">
-                    <td><input type="text" value="name 01"></td>
-                    <td>
-                      <select class="select_type">
-                        <option value="1">Boolean</option>
-                        <option value="2">String</option>
-                        <option value="3">Number</option>
-                      </select>
-                    </td>
-                    <td>
-                      <input type="number" value="1">
-                    </td>
-                    <td>
-                      <a href="javascript:void(0);" class="variable__remove">x</a>
-                    </td>
-                  </tr>
-                </table>
-            </div>
-
+              <div class="wrTableVariables"></div>
           </div>
         </div>
 
