--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a class="debug_btn" data-id="save_code">Сохранить</a></li>
           <li><a class="debug_btn" data-id="load_code">Загрузить</a></li>
         </ul>
-    </li>
+      </li>
       <li><a class="btn_back" style='display:none'>Назад</a></li>
     </ul>
 
@@ -64,6 +64,34 @@
         </div>
       </div>
     </div>
+
+    <div class="listNodes">
+      <div class="listNodes__btn" data-title="node"></div>
+
+      <div class="accordion">
+        <div class="accordion__head">События</div>
+        <div class="accordion__list">
+          <a href="javascript:void(0);">Движок загружен</a>
+        </div>
+      </div>
+      <div class="accordion">
+        <div class="accordion__head">Константы</div>
+        <div class="accordion__list">
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+        </div>
+      </div>
+      <div class="accordion">
+        <div class="accordion__head">Операторы Операторы</div>
+        <div class="accordion__list">
+          <a href="javascript:void(0);">Управляемый блок</a>
+          <a href="javascript:void(0);">Задать состояние блоку</a>
+          <a href="javascript:void(0);">Получить состояние блока</a>
+        </div>
+      </div>
+
+    </div>  
 
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
