correct size block

--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
           <a href="javascript:void(0);">Число</a>
           <a href="javascript:void(0);">Строка</a>
           <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
         </div>
       </div>
       <div class="accordion">
@@ -88,6 +100,36 @@
           <a href="javascript:void(0);">Управляемый блок</a>
           <a href="javascript:void(0);">Задать состояние блоку</a>
           <a href="javascript:void(0);">Получить состояние блока</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
+          <a href="javascript:void(0);">Число</a>
+          <a href="javascript:void(0);">Строка</a>
+          <a href="javascript:void(0);">Логическое</a>
         </div>
       </div>
 
