--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visual Code</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script  src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <link href="./css/toastr.min.css" rel="stylesheet" type="text/css">
+    <script src="./js/1.9.1_jquery.min.js"></script>
+    <script  src="./js/toastr.min.js"></script>
   </head>
   <body>
 
@@ -67,73 +67,8 @@
 
     <div class="listNodes">
       <div class="listNodes__btn" data-title="node"></div>
-
-      <div class="accordion">
-        <div class="accordion__head">События</div>
-        <div class="accordion__list">
-          <a href="javascript:void(0);">Движок загружен</a>
-        </div>
-      </div>
-      <div class="accordion">
-        <div class="accordion__head">Константы</div>
-        <div class="accordion__list">
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-        </div>
-      </div>
-      <div class="accordion">
-        <div class="accordion__head">Операторы Операторы</div>
-        <div class="accordion__list">
-          <a href="javascript:void(0);">Управляемый блок</a>
-          <a href="javascript:void(0);">Задать состояние блоку</a>
-          <a href="javascript:void(0);">Получить состояние блока</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-          <a href="javascript:void(0);">Число</a>
-          <a href="javascript:void(0);">Строка</a>
-          <a href="javascript:void(0);">Логическое</a>
-        </div>
-      </div>
-
-    </div>  
+    </div>
+    <div class="node_helper">+</div>
 
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
