--- a/index.html
+++ b/index.html
@@ -67,76 +67,9 @@
 
     <div class="listNodes">
       <div class="listNodes__btn" data-title="node"></div>
-
-      <div class="my_scroll">
-        <div class="accordion">
-          <div class="accordion__head">События</div>
-          <div class="accordion__list">
-            <a href="javascript:void(0);">Движок загружен</a>
-          </div>
-        </div>
-        <div class="accordion">
-          <div class="accordion__head">Константы</div>
-          <div class="accordion__list">
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-          </div>
-        </div>
-        <div class="accordion">
-          <div class="accordion__head">Операторы Операторы</div>
-          <div class="accordion__list">
-            <a href="javascript:void(0);">Управляемый блок</a>
-            <a href="javascript:void(0);">Задать состояние блоку</a>
-            <a href="javascript:void(0);">Получить состояние блока</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-            <a href="javascript:void(0);">Число</a>
-            <a href="javascript:void(0);">Строка</a>
-            <a href="javascript:void(0);">Логическое</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="node_helper">+</div>
-    </div>  
+      <div class="my_scroll"></div>
+    </div>
+    <div class="node_helper">+</div> 
 
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
