--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 
   <div id="app"></div>
 
-  <div id="debug_page">
+  <div id="debug_page" style="display: none;">
+    <div id="debug_close">X</div>
     <div id="debug_dialog" style="display: none;">
       <h3>Диалоговое окно</h3>
       <h4>Персонаж:<br><span id="dbg_char">SSSS</span></h4>
