--- a/index.html
+++ b/index.html
@@ -106,7 +106,29 @@
       </ul>
     </div>
 
+    <hr>
 
+    <div class="logs_data">
+      <h3>Логи</h3>
+      <div id="debug_log" class="my_scroll">
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+        <div class="debug_log_text">AAAA</div>
+
+      </div>
+    </div>
   </div>
 
   <script type="module" src="/src/main.ts"></script>
